<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/background">

    <RelativeLayout
        android:id="@+id/toolbarLogin"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:background="@drawable/shape_regbar">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_marginTop="60dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logoDescription" />

    <TextView
        android:id="@+id/txtStash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/emblema_one"
        android:layout_below="@id/imgLogo"
        android:text="@string/stash"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="20sp" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/svLog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/tvRegister"
        android:layout_marginStart="38dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="38dp">

        <RelativeLayout
            android:id="@+id/rlLogEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext"
                    android:drawableStart="@drawable/ic_email_gray"
                    android:drawablePadding="18dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="18dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey2" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tilEmail"
                android:layout_marginTop="10dp"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext"
                    android:drawableStart="@drawable/ic_lock_gray"
                    android:drawablePadding="18dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="18dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey2" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvForgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tilPassword"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:text="@string/forgotPassword"
                android:textColor="@color/grey"
                android:textSize="15sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/tvForgotPass"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                app:cardBackgroundColor="@color/background"
                app:cardCornerRadius="25dp"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txtLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/login"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/txtSignUpFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnLogin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:text="@string/signup"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/btnFacebook"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_below="@id/txtSignUpFacebook"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:src="@drawable/facebook"
                app:shapeAppearance="@style/roundedImageView" />

        </RelativeLayout>

    </ScrollView>

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="15sp" />

</RelativeLayout>