<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:id="@+id/toolbarReg"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:background="@drawable/shape_regbar">

        <ImageButton
            android:id="@+id/btnRegBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:src="@drawable/ic_back_white" />

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_marginTop="60dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/logo"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/logoDescription" />

        <TextView
            android:id="@+id/txtStash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgLogo"
            android:fontFamily="@font/emblema_one"
            android:text="@string/register_here"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/svLog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:layout_marginTop="200dp">

        <RelativeLayout
            android:id="@+id/rlLogEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext"
                    android:drawableStart="@drawable/ic_person_gray"
                    android:drawablePadding="18dp"
                    android:hint="@string/name"
                    android:inputType="textPersonName|textCapWords"
                    android:padding="18dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey2"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tilName"
                app:hintEnabled="false"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext"
                    android:drawableStart="@drawable/ic_email_gray"
                    android:drawablePadding="18dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="18dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey2"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_below="@id/tilEmail"
                android:layout_marginTop="10dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext"
                    android:drawableStart="@drawable/ic_lock_gray"
                    android:drawablePadding="18dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="18dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey2"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_below="@id/tilPassword"
                android:layout_marginTop="10dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext"
                    android:drawableStart="@drawable/ic_lock_gray"
                    android:drawablePadding="18dp"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:padding="18dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey2"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                app:cardBackgroundColor="@color/background"
                app:cardCornerRadius="25dp"
                android:layout_below="@id/tilConfirmPassword"
                android:layout_marginTop="10dp"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txtLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/registerbtn"
                        android:textColor="@color/white"
                        android:layout_centerInParent="true"
                        android:textSize="20sp"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>