<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="475dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/teal_200"
    android:padding="5dp"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/txtClose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:textColor="@color/white"
        android:text="@string/x"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:gravity="center"
        android:background="@drawable/circlebackground"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilColName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            android:layout_marginTop="110dp"
            android:layout_marginBottom="20dp">

        <EditText
            android:id="@+id/etColName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_edittext"
            android:hint="@string/collection_name"
            android:inputType="textPersonName|textCapWords"
            android:padding="18dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/grey2" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:onClick="ShowCollectionPopup"
            android:id="@+id/btnCreateCollection"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="25dp"
            android:layout_marginTop="20dp"
            app:cardElevation="10dp"
            android:layout_below="@+id/tilColName">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtCollection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_collection"
                    android:textColor="@color/white"
                    android:layout_centerInParent="true"
                    android:textSize="20sp"/>
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</LinearLayout>